# agent-os

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  code_files.txt  docker-compose.yml
backend/: Dockerfile  __init__.py  pyproject.toml  pytest.ini  pytest_debug.txt  pytest_out.txt  pytest_out_utf8.txt  requirements.txt  test_diagnostics.txt  test_diagnostics_utf8.txt  test_out.txt  test_out_2.txt  test_out_2_utf8.txt  test_out_utf8.txt  test_res_utf8.txt  test_results.txt
backend/adapters/: __init__.py
backend/agents/: base_agent.py
backend/api/: __init__.py  agents.py  audit.py  auth.py  chat.py  conversations.py  crews.py  data_sources.py  health.py  knowledge.py  knowledge_graphs.py  llm.py  marketplace.py  mcp_servers.py  model_registry.py  observability.py  pipeline.py  plans.py  preferences.py  remote_apis.py  settings.py  skill_registry.py  skills.py  storage.py  stores.py  supervisor.py  tasks.py  tool_registry.py  workflows.py
backend/app/: __init__.py  main.py
backend/chroma_db/: chroma.sqlite3
backend/core/: __init__.py  config.py  engine.py  exceptions.py  logging_config.py  middleware.py  nodes.py  observability.py  schemas.py  security.py
backend/kernel/: runtime.py
backend/knowledge/: crawler.py  extractor.py  manager.py  parser.py  vector.py
backend/memory/: redis_memory.py
backend/pipeline/: __init__.py  base.py  dependencies.py  models.py  orchestrator.py
backend/skills/: __init__.py  loader.py  models.py
backend/tests/: __init__.py  test_api.py  test_skills.py  (+1 more)
(+164 files in other folders)
