[project]
name = "agentos-backend"
version = "1.0.0"
description = "AgentOS - Enterprise Multi-Agent AI Operating System API"
license = "Proprietary"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["venv", ".venv", "__pycache__", "*.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line too long — enforced by formatter, not linter
    "B008",   # Depends() in FastAPI signatures is the standard pattern
    "N815",   # camelCase fields in Pydantic API schemas (match JS frontend convention)
    "N818",   # AgentOSException: project-defined base class naming convention
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
addopts = "-v --tb=short"
